@@ -1,3 +1,8 @@
+2010-10-11	The InnoDB Team
+	* row/row0sel.c
+	Fix Bug #57345 btr_pcur_store_position abort for load with
+	concurrent lock/unlock tables
+
 2010-10-06	The InnoDB Team
 	* row/row0mysql.c, innodb_bug57255.result, innodb_bug57255.test
 	Fix Bug #Cascade Delete results in "Got error -1 from storage engine"
@@ -40,7 +45,6 @@
 	* handler/ha_innodb.cc
 	Fix Bug #55382 Assignment with SELECT expressions takes unexpected
 	S locks in READ COMMITTED
->>>>>>> MERGE-SOURCE
 
 2010-07-27	The InnoDB Team
 
